documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

typedef struct
{
    USHORT msgopt;              //User writes message options
    USHORT msgact;              //Card writes message activity
    union {
		ULONG  msgdata;         //Card/User writes message data (Rcv/Xmt)
		ULONG  listptr;         //User writes list buffer pointer
	};
    union {
		ULONG  timetag;         //Card writes time tag
		ULONG  hitcount;        //Card writes hit count
	};
	union {
		ULONG  maxtime;			//Card writes max time
		ULONG  elapsetime;      //Card writes elapsed time
    };
	ULONG  mintime;	            //Card writes min time
    ULONG  userptr;             //User writes user code pointer
    ULONG  miscptr;             //User writes misc. pointer
    ULONG  rsvd;	            //Reserved
} MSGFIELDS;
typedef MSGFIELDS * LPMSGFIELDS;

/**
*
*  L43 Driver functions.
*
**/

L43W32API ULONG __stdcall L43_BCDGetData(ULONG msg,USHORT msb,USHORT lsb);

L43W32API ULONG __stdcall L43_BCDGetMant(ULONG msg,USHORT sigdig);

L43W32API USHORT __stdcall L43_BCDGetSign(ULONG msg);

L43W32API USHORT __stdcall L43_BCDGetSSM(ULONG msg);

L43W32API VOID __stdcall L43_BCDGetVal(LPSTR buf,ULONG msg,USHORT sigdig,LPCSTR resolstr);

L43W32API ULONG __stdcall L43_BCDPutData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);

L43W32API ULONG __stdcall L43_BCDPutMant(ULONG msg,ULONG value,USHORT sigdig,USHORT sign);

L43W32API ULONG __stdcall L43_BCDPutSign(ULONG msg,USHORT sign);

L43W32API ULONG __stdcall L43_BCDPutSSM(ULONG msg,USHORT value);

L43W32API ULONG __stdcall L43_BCDPutVal(LPCSTR buf,ULONG msg,USHORT sigdig,LPCSTR resolstr);

L43W32API ULONG __stdcall L43_BNRGetData(ULONG msg,USHORT msb,USHORT lsb);

L43W32API ULONG __stdcall L43_BNRGetMant(ULONG msg,USHORT sigbit);

L43W32API USHORT __stdcall L43_BNRGetSign(ULONG msg);

L43W32API USHORT __stdcall L43_BNRGetSSM(ULONG msg);

L43W32API VOID __stdcall L43_BNRGetVal(LPSTR buf,ULONG msg,USHORT sigbit,LPCSTR resolstr);

L43W32API ULONG __stdcall L43_BNRPutData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);

L43W32API ULONG __stdcall L43_BNRPutMant(ULONG msg,ULONG value,USHORT sigbit,USHORT twos);

L43W32API ULONG __stdcall L43_BNRPutSign(ULONG msg,USHORT twos);

L43W32API ULONG __stdcall L43_BNRPutSSM(ULONG msg,USHORT value);

L43W32API ULONG __stdcall L43_BNRPutVal(LPCSTR buf,ULONG msg,USHORT sigbit,LPCSTR resolstr);

L43W32API USHORT __stdcall L43_BrdNumRd(HCARD handleval);

L43W32API VOID __stdcall L43_BrdNumWr(USHORT brdnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardClose(HCARD handleval);

L43W32API HCARD __stdcall L43_CardOpen(INT cardnum);

L43W32API VOID __stdcall L43_CardReset(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardResume(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardStart(HCARD handleval);

L43W32API BOOL __stdcall L43_CardStop(HCARD handleval);

L43W32API VOID __stdcall L43_CardTrigger(HCARD handleval);

L43W32API ERRVAL __stdcall L43_ChClear(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_ChConfig(ULONG configval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_ChPause(INT channum,HCARD handleval);

L43W32API INT __stdcall L43_ChPauseCheck(INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_ChResume(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_ExtDinRd(HCARD handleval);

L43W32API VOID __stdcall L43_ExtDinWr(BOOL dinval,HCARD handleval);

L43W32API BOOL __stdcall L43_ExtDIORd(INT dionum,HCARD handleval);

L43W32API VOID __stdcall L43_ExtDIOWr(INT dionum,BOOL dioval,HCARD handleval);

L43W32API BOOL __stdcall L43_ExtLEDRd(HCARD handleval);

L43W32API VOID __stdcall L43_ExtLEDWr(BOOL ledval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_FilterClear(BASEADDR baseaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_FilterDefault(ULONG configval,INT channum,HCARD handleval);

L43W32API MSGADDR __stdcall L43_FilterRd(INT labelval,INT sdival,INT channum,HCARD handleval);

L43W32API MSGADDR __stdcall L43_FilterSet(ULONG configval,INT labelval,INT sdimask,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_FilterWr(MSGADDR msgaddr,INT labelval,INT sdival,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_FldGetData(ULONG msgval);

L43W32API USHORT __stdcall L43_FldGetLabel(ULONG msgval);

L43W32API USHORT __stdcall L43_FldGetParity(ULONG msgval);

L43W32API USHORT __stdcall L43_FldGetSDI(ULONG msgval);

L43W32API ULONG __stdcall L43_FldGetValue(ULONG msgval,USHORT startbit,USHORT endbit);

L43W32API ULONG __stdcall L43_FldPutData(ULONG msgval,ULONG data);

L43W32API ULONG __stdcall L43_FldPutLabel(ULONG msgval,USHORT label);

L43W32API ULONG __stdcall L43_FldPutSDI(ULONG msgval,USHORT sdi);

L43W32API ULONG __stdcall L43_FldPutValue(ULONG msgval,ULONG dataval,USHORT startbit,USHORT endbit);

L43W32API VOID __stdcall L43_GetChanCount(LPINT rcvcount,LPINT xmtcount,HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntConfig(USHORT configval,USHORT count,HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntInstall(LPVOID hEvent,HCARD handleval);

L43W32API ULONG __stdcall L43_IntRd(LPUSHORT typeval,LPULONG infoval,HCARD handleval);

L43W32API VOID __stdcall L43_IntReset(HCARD handleval);

L43W32API INT __stdcall L43_IntStatus(HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntUninstall(HCARD handleval);

L43W32API BOOL __stdcall L43_IsChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_IsRcvChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_IsXmtChan(INT channum,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListAsyncCreate(ULONG listconfigval,INT count,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_ListDataRd(LISTADDR listaddr,HCARD handleval);

L43W32API BOOL __stdcall L43_ListDataWr(ULONG value,LISTADDR listaddr,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListRcvCreate(ULONG listconfigval,INT count,MSGADDR msgaddr,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListXmtCreate(ULONG listconfigval,INT count,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgBlockRd(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgBlockWr(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgCommRd(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgCommWr(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgCreate(ULONG configval,HCARD handleval);

L43W32API ULONG __stdcall L43_MsgDataRd(MSGADDR msgaddr,HCARD handleval);

L43W32API VOID __stdcall L43_MsgDataWr(ULONG value,MSGADDR msgaddr,HCARD handleval);

L43W32API BOOL __stdcall L43_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedBranch(USHORT condition,SCHNDX destindex,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedCall(USHORT condition,SCHNDX destindex,INT channum,HCARD handleval);