documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32VB.BAS


Public Declare Function L43_BCDGetData Lib "L43W32.DLL" Alias "_L43_BCDGetData@12" (ByVal msg As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function L43_BCDGetMant Lib "L43W32.DLL" Alias "_L43_BCDGetMant@8" (ByVal msg As Long, ByVal sigdig As Integer) As Long
Public Declare Function L43_BCDGetSign Lib "L43W32.DLL" Alias "_L43_BCDGetSign@4" (ByVal msg As Long) As Integer
Public Declare Function L43_BCDGetSSM Lib "L43W32.DLL" Alias "_L43_BCDGetSSM@4" (ByVal msg As Long) As Integer
Public Declare Function L43_BCDGetVal Lib "L43W32.DLL" Alias "_L43_BCDGetVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigdig As Integer, ByRef resolstr As String) As Long
Public Declare Function L43_BCDPutData Lib "L43W32.DLL" Alias "_L43_BCDPutData@16" (ByVal msg As Long, ByVal value As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function L43_BCDPutMant Lib "L43W32.DLL" Alias "_L43_BCDPutMant@16" (ByVal msg As Long, ByVal value As Long, ByVal sigdig As Integer, ByVal sign As Integer) As Long
Public Declare Function L43_BCDPutSign Lib "L43W32.DLL" Alias "_L43_BCDPutSign@8" (ByVal msg As Long, ByVal sign As Integer) As Long
Public Declare Function L43_BCDPutSSM Lib "L43W32.DLL" Alias "_L43_BCDPutSSM@8" (ByVal msg As Long, ByVal value As Integer) As Long
Public Declare Function L43_BCDPutVal Lib "L43W32.DLL" Alias "_L43_BCDPutVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigdig As Integer, ByRef resolstr As String) As Long
Public Declare Function L43_BNRGetData Lib "L43W32.DLL" Alias "_L43_BNRGetData@12" (ByVal msg As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function L43_BNRGetMant Lib "L43W32.DLL" Alias "_L43_BNRGetMant@8" (ByVal msg As Long, ByVal sigbit As Integer) As Long
Public Declare Function L43_BNRGetSign Lib "L43W32.DLL" Alias "_L43_BNRGetSign@4" (ByVal msg As Long) As Integer
Public Declare Function L43_BNRGetSSM Lib "L43W32.DLL" Alias "_L43_BNRGetSSM@4" (ByVal msg As Long) As Integer
Public Declare Function L43_BNRGetVal Lib "L43W32.DLL" Alias "_L43_BNRGetVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigbit As Integer, ByRef resolstr As String) As Long
Public Declare Function L43_BNRPutData Lib "L43W32.DLL" Alias "_L43_BNRPutData@16" (ByVal msg As Long, ByVal value As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function L43_BNRPutMant Lib "L43W32.DLL" Alias "_L43_BNRPutMant@16" (ByVal msg As Long, ByVal value As Long, ByVal sigbit As Integer, ByVal twos As Integer) As Long
Public Declare Function L43_BNRPutSign Lib "L43W32.DLL" Alias "_L43_BNRPutSign@8" (ByVal msg As Long, ByVal twos As Integer) As Long
Public Declare Function L43_BNRPutSSM Lib "L43W32.DLL" Alias "_L43_BNRPutSSM@8" (ByVal msg As Long, ByVal value As Integer) As Long
Public Declare Function L43_BNRPutVal Lib "L43W32.DLL" Alias "_L43_BNRPutVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigbit As Integer, ByRef resolstr As String) As Long
Public Declare Function L43_BrdNumRd Lib "L43W32.DLL" Alias "_L43_BrdNumRd@4" (ByVal handleval As Long) As Integer
Public Declare Function L43_BrdNumWr Lib "L43W32.DLL" Alias "_L43_BrdNumWr@8" (ByVal brdnum As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_CardClose Lib "L43W32.DLL" Alias "_L43_CardClose@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardOpen Lib "L43W32.DLL" Alias "_L43_CardOpen@4" (ByVal cardnum As Long) As Long
Public Declare Function L43_CardReset Lib "L43W32.DLL" Alias "_L43_CardReset@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardResume Lib "L43W32.DLL" Alias "_L43_CardResume@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardStart Lib "L43W32.DLL" Alias "_L43_CardStart@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardStop Lib "L43W32.DLL" Alias "_L43_CardStop@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardTrigger Lib "L43W32.DLL" Alias "_L43_CardTrigger@4" (ByVal handleval As Long) As Long
Public Declare Function L43_ChClear Lib "L43W32.DLL" Alias "_L43_ChClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChConfig Lib "L43W32.DLL" Alias "_L43_ChConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChPause Lib "L43W32.DLL" Alias "_L43_ChPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChPauseCheck Lib "L43W32.DLL" Alias "_L43_ChPauseCheck@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChResume Lib "L43W32.DLL" Alias "_L43_ChResume@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ExtDinRd Lib "L43W32.DLL" Alias "_L43_ExtDinRd@4" (ByVal handleval As Long) As Long
Public Declare Function L43_ExtDinWr Lib "L43W32.DLL" Alias "_L43_ExtDinWr@8" (ByVal dinval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ExtDIORd Lib "L43W32.DLL" Alias "_L43_ExtDIORd@8" (ByVal dionum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ExtDIOWr Lib "L43W32.DLL" Alias "_L43_ExtDIOWr@12" (ByVal dionum As Long, ByVal dioval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ExtLEDRd Lib "L43W32.DLL" Alias "_L43_ExtLEDRd@4" (ByVal handleval As Long) As Long
Public Declare Function L43_ExtLEDWr Lib "L43W32.DLL" Alias "_L43_ExtLEDWr@8" (ByVal ledval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FilterClear Lib "L43W32.DLL" Alias "_L43_FilterClear@8" (ByVal basevaladdr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FilterDefault Lib "L43W32.DLL" Alias "_L43_FilterDefault@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FilterRd Lib "L43W32.DLL" Alias "_L43_FilterRd@16" (ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FilterSet Lib "L43W32.DLL" Alias "_L43_FilterSet@20" (ByVal configval As Long, ByVal labelval As Long, ByVal sdimask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FilterWr Lib "L43W32.DLL" Alias "_L43_FilterWr@20" (ByVal msgaddr As Long, ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FldGetData Lib "L43W32.DLL" Alias "_L43_FldGetData@4" (ByVal msgval As Long) As Long
Public Declare Function L43_FldGetLabel Lib "L43W32.DLL" Alias "_L43_FldGetLabel@4" (ByVal msgval As Long) As Integer
Public Declare Function L43_FldGetParity Lib "L43W32.DLL" Alias "_L43_FldGetParity@4" (ByVal msgval As Long) As Integer
Public Declare Function L43_FldGetSDI Lib "L43W32.DLL" Alias "_L43_FldGetSDI@4" (ByVal msgval As Long) As Integer
Public Declare Function L43_FldGetValue Lib "L43W32.DLL" Alias "_L43_FldGetValue@12" (ByVal msgval As Long, ByVal startbit As Integer, ByVal endbit As Integer) As Long
Public Declare Function L43_FldPutData Lib "L43W32.DLL" Alias "_L43_FldPutData@8" (ByVal msgval As Long, ByVal data As Long) As Long
Public Declare Function L43_FldPutLabel Lib "L43W32.DLL" Alias "_L43_FldPutLabel@8" (ByVal msgval As Long, ByVal label As Integer) As Long
Public Declare Function L43_FldPutSDI Lib "L43W32.DLL" Alias "_L43_FldPutSDI@8" (ByVal msgval As Long, ByVal sdi As Integer) As Long
Public Declare Function L43_FldPutValue Lib "L43W32.DLL" Alias "_L43_FldPutValue@16" (ByVal msgval As Long, ByVal dataval As Long, ByVal startbit As Integer, ByVal endbit As Integer) As Long
Public Declare Function L43_GetChanCount Lib "L43W32.DLL" Alias "_L43_GetChanCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long) As Long
Public Declare Function L43_IntConfig Lib "L43W32.DLL" Alias "_L43_IntConfig@12" (ByVal configval As Integer, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_IntInstall Lib "L43W32.DLL" Alias "_L43_IntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function L43_IntRd Lib "L43W32.DLL" Alias "_L43_IntRd@12" (ByRef typevalval As Integer, ByRef infoval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_IntReset Lib "L43W32.DLL" Alias "_L43_IntReset@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IntStatus Lib "L43W32.DLL" Alias "_L43_IntStatus@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IntUninstall Lib "L43W32.DLL" Alias "_L43_IntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IsChan Lib "L43W32.DLL" Alias "_L43_IsChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_IsRcvChan Lib "L43W32.DLL" Alias "_L43_IsRcvChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_IsXmtChan Lib "L43W32.DLL" Alias "_L43_IsXmtChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListAsyncCreate Lib "L43W32.DLL" Alias "_L43_ListAsyncCreate@16" (ByVal listconfigval As Long, ByVal count As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListDataRd Lib "L43W32.DLL" Alias "_L43_ListDataRd@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListDataWr Lib "L43W32.DLL" Alias "_L43_ListDataWr@12" (ByVal value As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListRcvCreate Lib "L43W32.DLL" Alias "_L43_ListRcvCreate@16" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListXmtCreate Lib "L43W32.DLL" Alias "_L43_ListXmtCreate@16" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgBlockRd Lib "L43W32.DLL" Alias "_L43_MsgBlockRd@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgBlockWr Lib "L43W32.DLL" Alias "_L43_MsgBlockWr@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgCommRd Lib "L43W32.DLL" Alias "_L43_MsgCommRd@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgCommWr Lib "L43W32.DLL" Alias "_L43_MsgCommWr@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgCreate Lib "L43W32.DLL" Alias "_L43_MsgCreate@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgDataRd Lib "L43W32.DLL" Alias "_L43_MsgDataRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgDataWr Lib "L43W32.DLL" Alias "_L43_MsgDataWr@12" (ByVal value As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgIsAccessed Lib "L43W32.DLL" Alias "_L43_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedBranch Lib "L43W32.DLL" Alias "_L43_SchedBranch@16" (ByVal condition As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedBuild Lib "L43W32.DLL" Alias "_L43_SchedBuild@24" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedCall Lib "L43W32.DLL" Alias "_L43_SchedCall@16" (ByVal condition As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
